TAG: vocload-3-5-2-2
DATE: 02/27/2008
STAFF: lec
CHANGES:
1) TR8828, OMIM.transaction update/fix
   also added OMIM.exclude, OMIM.synonym to cvs

TAG: vocload-3-5-2-1
DATE: 3/19/2007
STAFF: dbm
CHANGES:
1) Renamed "Obsolete Terms" DAG to "Obsolete"

TAG: vocload-3-5-2-0
DATE: 2/27/2007
STAFF: dbm
CHANGES:
1) Merge tr7683 branch to the trunk

TAG: vocload-tr7683-5
DATE: 2/8/2007
STAFF: dbm
CHANGES:
1) Terminate the load when the namespace is missing (GO Only).

TAG: vocload-tr7683-4
DATE: 1/24/2007
STAFF: dbm
CHANGES:
1) Obsolete term attributes added

TAG: vocload-tr7683-3
TAG: vocload-tr7683-2
DATE: 12/15/2006
STAFF: dbm
CHANGES:
1) TR8033 (part of TR7683)

TAG: vocload-tr7683-1
DATE: 11/06/2006
STAFF: lec
CHANGES:
1) TR7683

TAG: vocload-tr7683-BP
DATE: 11/06/2006
STAFF: lec
CHANGES:
1) branch point tag for TR7683

TAG: vocload-3-5-1-1
DATE: 10/31/2006
STAFF: dbm
CHANGES:
1) TR 5677 (OBO)

TAG: vocload-tr5677-1
DATE: 10/25/2006
STAFF: dbm
CHANGES:
1) TR 5677 (OBO)

TAG: vocload-3-4-1-4
TAG: vocload-3-4-1-3
DATE: 09/20/2006
STAFF: lec
CHANGES:
1) VOClib.config; fixed die

TAG: vocload-tr5677-BP
DATE: 9/6/2006
STAFF: dbm
CHANGES:
1) Branch point tag for OBO conversion - no longer using tr7062 branch

TAG: vocload-3-4-1-2
DATE: 01/23/2006
STAFF: lec
CHANGES:
1) added DSQUERY to Configuration.default

TAG: vocload-3-4-1-1
DATE: 12/27/2005
STAFF: lec
CHANGES:
1) GO.config, GO.rcd for new gene ontology data downloads directory

TAG: vocload-tr7062-BP
DATE: 12/15/2005
STAFF: lec
CHANGES:
1) branch point tag for MGI 3.5 (TR 7062)
   OBO parser

TAG: vocload-3-4-0-0
DATE: 10/13/2005
STAFF: sc
RELEASE: 3.4 alpha
CHANGES: merge of snp ranch to trunk

DATE: 09/02/2005
STAFF: sc
RELEASE: A
CHANGES: loadTerms.py - fixed to allow null numericPart in ACC_Accession.bcp

TAG: vocload-snp-1
DATE: 09/23/2005
STAFF: sc
RELEASE: A
CHANGES:
1) loadTerms.py - fixed bug that didn't allow null prefixPart

TAG: vocload-snp-BP
DATE: 09/02/2005
STAFF: sc
RELEASE: A
CHANGES: branch point tag
