@@ -22,7 +22,7 @@ cd `dirname $0`
 
 RUNTIME_DIR="/data/loads/mgi/vocload/runTimeMouseCyc"
 ARCHIVE_DIR="/data/loads/mgi/vocload/archiveMouseCyc"
-DATA_DIR="/mgi/all/wts_projects/9200/9206"
+DATA_DIR="/data/loads/mousecyc/mousecycload/input"
 
 export RUNTIME_DIR
 export ARCHIVE_DIR
