@@ -1,32 +1,0 @@
-<HTML><HEADER>
-<body bgcolor="#ffffff" link="#006666" vlink="#666666">
-<TITLE>MouseCyc Vocabulary/DAG Load</TITLE>
-</HEADER>
-<BODY>
-
-<H2>MouseCyc Vocabulary/DAG Load</H2>
-
-<H3>Inputs</H3>
-<UL>
-<LI><A HREF="http://shire.informatics.jax.org/wts_projects/9200/9206//mousecyc_pathways.obo">mousecyc_pathways.obo</A>
-</UL>
-
-<H3>Reports</H3>
-<UL>
-<LI><A HREF="/data/loads/mgi/vocload/runTimeMouseCyc/discrepancy.html">discrepancy.html</A> - Curator Report
-<LI><A HREF="/data/loads/mgi/vocload/runTimeMouseCyc/dagDiscrepancy.html">dagDiscrepancy.html</A> - DAG Discrepancy Report
-</UL>
-
-<H3>Outputs</H3>
-<UL>
-<LI><A HREF="/data/loads/mgi/vocload/runTimeMouseCyc/validationLog.txt">validationLog.txt</A> - OBO input file validation errors
-<LI><A HREF="/data/loads/mgi/vocload/runTimeMouseCyc/fullLog.txt">fullLog.txt</A> - File generated by vocload containing a complete record of the job, including all SQL executed.
-<LI><A HREF="/data/loads/mgi/vocload/runTimeMouseCyc/Termfile">Termfile</A> - File generated by vocload containing all the terms being processed.
-<LI><A HREF="/data/loads/mgi/vocload/runTimeMouseCyc/"><B>All available run-time files</B></A> - All files located in the run-time directory.
-</UL>
-
-<H3>Archives</H3>
-<UL>
-<LI><A HREF="/data/loads/mgi/vocload/archiveMouseCyc/"><B>Archive</B></A> - Data files from previous loads.
-</UL>
-
